--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@
 project.name=robotlegs-extensions-SignalCommandMap
 
 #Version number for current SignalCommandMap
-extension.ver.num=v1.0.0b1
+extension.ver.num=v1.0.0
 project.name.versioned=${project.name}-${extension.ver.num}
 
 #build locations
